# serializer version: 1
# name: test_get_battery_soc
  KamereonVehicleBatterySocData(raw_data={'lastEnergyUpdateTimestamp': '2025-04-18T06:51:09Z', 'socMin': 20, 'socTarget': 80}, lastEnergyUpdateTimestamp='2025-04-18T06:51:09Z', socMin=20, socTarget=80)
# ---
# name: test_get_charge_schedule
  dict({
    'calendar': dict({
      'friday': list([
        dict({
          'activationState': False,
          'duration': 480,
          'startTime': '2300',
        }),
      ]),
      'monday': list([
        dict({
          'activationState': False,
          'duration': 480,
          'startTime': '2300',
        }),
      ]),
      'saturday': list([
        dict({
          'activationState': False,
          'duration': 480,
          'startTime': '2300',
        }),
      ]),
      'sunday': list([
        dict({
          'activationState': False,
          'duration': 480,
          'startTime': '2300',
        }),
      ]),
      'thursday': list([
        dict({
          'activationState': False,
          'duration': 480,
          'startTime': '2300',
        }),
      ]),
      'tuesday': list([
        dict({
          'activationState': False,
          'duration': 480,
          'startTime': '2300',
        }),
      ]),
      'wednesday': list([
        dict({
          'activationState': False,
          'duration': 480,
          'startTime': '2300',
        }),
      ]),
    }),
  })
# ---
# name: test_get_charge_schedule_kcm[single.active]
  dict({
    'chargeDuration': 9000,
    'chargeModeRq': 'SCHEDULED',
    'chargeTimeStart': '00:00',
    'delegatedActivated': False,
    'lastSettingsUpdateTimestamp': '2025-04-24T12:17:12.247Z',
    'preconditioningHeatedLeftSeat': False,
    'preconditioningHeatedRightSeat': False,
    'preconditioningHeatedStrgWheel': False,
    'preconditioningTemperature': 20.0,
    'programs': list([
      dict({
        'programActivationFriday': True,
        'programActivationMonday': True,
        'programActivationSaturday': True,
        'programActivationStatus': True,
        'programActivationSunday': True,
        'programActivationThursday': True,
        'programActivationTuesday': True,
        'programActivationWednesday': True,
        'programDepartureTime': '02:00',
        'programType': 'CHARGE_AND_PRECONDITIONING',
      }),
    ]),
  })
# ---
# name: test_get_charge_schedule_kcm[single.inactive]
  dict({
    'chargeDuration': 9000,
    'chargeModeRq': 'SCHEDULED',
    'chargeTimeStart': '00:00',
    'delegatedActivated': False,
    'lastSettingsUpdateTimestamp': '2025-04-24T12:17:12.247Z',
    'preconditioningHeatedLeftSeat': False,
    'preconditioningHeatedRightSeat': False,
    'preconditioningHeatedStrgWheel': False,
    'preconditioningTemperature': 20.0,
    'programs': list([
      dict({
        'programActivationFriday': True,
        'programActivationMonday': True,
        'programActivationSaturday': True,
        'programActivationStatus': False,
        'programActivationSunday': True,
        'programActivationThursday': True,
        'programActivationTuesday': True,
        'programActivationWednesday': True,
        'programDepartureTime': '02:00',
        'programType': 'CHARGE_AND_PRECONDITIONING',
      }),
    ]),
  })
# ---
# name: test_get_charging_settings_kcm[always]
  KamereonVehicleChargingSettingsData(raw_data={'mode': 'always', 'schedules': []}, mode='always', schedules=[], startDateTime=None, delay=None)
# ---
# name: test_get_charging_settings_kcm[delayed]
  KamereonVehicleChargingSettingsData(raw_data={'startDateTime': '2025-12-29T10:20:30Z', 'delay': 300, 'mode': 'delayed', 'schedules': []}, mode='delayed', schedules=[], startDateTime='2025-12-29T10:20:30Z', delay=300)
# ---
# name: test_get_charging_settings_kcm[scheduled]
  KamereonVehicleChargingSettingsData(raw_data={'mode': 'scheduled', 'schedules': [{'id': 1, 'activated': True, 'monday': {'startTime': 'T01:01Z', 'duration': 360}, 'tuesday': {'startTime': 'T01:01Z', 'duration': 360}, 'wednesday': {'startTime': 'T01:01Z', 'duration': 360}, 'thursday': {'startTime': 'T01:01Z', 'duration': 360}, 'friday': {'startTime': 'T01:01Z', 'duration': 360}, 'saturday': {'startTime': 'T01:01Z', 'duration': 360}, 'sunday': {'startTime': 'T01:01Z', 'duration': 360}}, {'id': 2, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}, {'id': 3, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}, {'id': 4, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}, {'id': 5, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}]}, mode='scheduled', schedules=[ChargeSchedule(raw_data={'id': 1, 'activated': True, 'monday': {'startTime': 'T01:01Z', 'duration': 360}, 'tuesday': {'startTime': 'T01:01Z', 'duration': 360}, 'wednesday': {'startTime': 'T01:01Z', 'duration': 360}, 'thursday': {'startTime': 'T01:01Z', 'duration': 360}, 'friday': {'startTime': 'T01:01Z', 'duration': 360}, 'saturday': {'startTime': 'T01:01Z', 'duration': 360}, 'sunday': {'startTime': 'T01:01Z', 'duration': 360}}, id=1, activated=True, monday=ChargeDaySchedule(raw_data={'startTime': 'T01:01Z', 'duration': 360}, startTime='T01:01Z', duration=360), tuesday=ChargeDaySchedule(raw_data={'startTime': 'T01:01Z', 'duration': 360}, startTime='T01:01Z', duration=360), wednesday=ChargeDaySchedule(raw_data={'startTime': 'T01:01Z', 'duration': 360}, startTime='T01:01Z', duration=360), thursday=ChargeDaySchedule(raw_data={'startTime': 'T01:01Z', 'duration': 360}, startTime='T01:01Z', duration=360), friday=ChargeDaySchedule(raw_data={'startTime': 'T01:01Z', 'duration': 360}, startTime='T01:01Z', duration=360), saturday=ChargeDaySchedule(raw_data={'startTime': 'T01:01Z', 'duration': 360}, startTime='T01:01Z', duration=360), sunday=ChargeDaySchedule(raw_data={'startTime': 'T01:01Z', 'duration': 360}, startTime='T01:01Z', duration=360)), ChargeSchedule(raw_data={'id': 2, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}, id=2, activated=False, monday=None, tuesday=None, wednesday=None, thursday=None, friday=None, saturday=None, sunday=None), ChargeSchedule(raw_data={'id': 3, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}, id=3, activated=False, monday=None, tuesday=None, wednesday=None, thursday=None, friday=None, saturday=None, sunday=None), ChargeSchedule(raw_data={'id': 4, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}, id=4, activated=False, monday=None, tuesday=None, wednesday=None, thursday=None, friday=None, saturday=None, sunday=None), ChargeSchedule(raw_data={'id': 5, 'activated': False, 'monday': None, 'tuesday': None, 'wednesday': None, 'thursday': None, 'friday': None, 'saturday': None, 'sunday': None}, id=5, activated=False, monday=None, tuesday=None, wednesday=None, thursday=None, friday=None, saturday=None, sunday=None)], startDateTime=None, delay=None)
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/alpine_A290.1.json]
  dict({
    'actions/charge-start': None,
    'actions/charge-stop': None,
    'actions/horn-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'actions/hvac-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'actions/hvac-stop': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='kca-stop'),
    'actions/lights-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/ev/settings', mode='kcm'),
    'charges': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charges', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'pressure': None,
    'res-state': None,
    'soc-levels': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/ev/soc-levels', mode='default'),
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/austral_XHN1SU.1.json]
  dict({
    'actions/horn-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'actions/lights-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'battery-status': None,
    'charge-history': None,
    'charge-mode': None,
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-status': None,
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'pressure': None,
    'res-state': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/captur_ii.1.json]
  dict({
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': None,
    'charging-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charging-settings', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-history': None,
    'hvac-sessions': None,
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'notification-settings': None,
    'pressure': None,
    'res-state': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/captur_ii.2.json]
  dict({
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': None,
    'charging-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charging-settings', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-history': None,
    'hvac-sessions': None,
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'notification-settings': None,
    'pressure': None,
    'res-state': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/clio_v.1.json]
  dict({
    'hvac-status': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/clio_v.2.json]
  dict({
    'alerts': None,
    'battery-status': None,
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': None,
    'charges': None,
    'charging-settings': None,
    'charging-start': None,
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'horn-lights': None,
    'hvac-history': None,
    'hvac-schedule': None,
    'hvac-sessions': None,
    'hvac-settings': None,
    'hvac-start': None,
    'hvac-status': None,
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'notification-settings': None,
    'pause-resume': None,
    'pressure': None,
    'res-state': None,
    'soc-levels': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/duster.1.json]
  dict({
    'actions/charge-set-mode': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charge-mode', mode='default'),
    'actions/charge-set-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/actions/charge-schedule', mode='default'),
    'actions/charge-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charging-start', mode='default'),
    'actions/charge-stop': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charging-start', mode='default'),
    'actions/charging-set-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charge-mode', mode='default'),
    'actions/horn-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'actions/hvac-set-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/actions/hvac-schedule', mode='default'),
    'actions/hvac-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'actions/hvac-stop': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'actions/lights-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'alerts': EndpointDefinition(endpoint='/vehicles/{vin}/alerts', mode='default'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charge-history', mode='default'),
    'charge-mode': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charge-mode', mode='default'),
    'charge-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charge-schedule', mode='default'),
    'charges': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charges', mode='default'),
    'charging-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charging-settings', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-history': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-history', mode='default'),
    'hvac-sessions': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-sessions', mode='default'),
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/lock-status', mode='default'),
    'notification-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/notification-settings', mode='default'),
    'pressure': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/pressure', mode='default'),
    'res-state': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/res-state', mode='default'),
    'soc-levels': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/ev/soc-levels', mode='default'),
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/megane_e-tech.1.json]
  dict({
    'actions/charge-set-mode': None,
    'actions/charge-set-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/actions/charge-schedule', mode='default'),
    'actions/charge-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charging-start', mode='default'),
    'actions/charge-stop': None,
    'actions/charging-set-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charge-mode', mode='default'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': None,
    'charging-settings': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/charge/settings', mode='kcm'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-history': None,
    'hvac-sessions': None,
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'notification-settings': None,
    'pressure': None,
    'res-state': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/megane_e-tech.2.json]
  dict({
    'actions/charge-set-mode': None,
    'actions/charge-set-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/actions/charge-schedule', mode='default'),
    'actions/charge-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charging-start', mode='default'),
    'actions/charge-stop': None,
    'actions/charging-set-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charge-mode', mode='default'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': None,
    'charging-settings': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/charge/settings', mode='kcm'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-history': None,
    'hvac-sessions': None,
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'notification-settings': None,
    'pressure': None,
    'res-state': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/renault_5.1.json]
  dict({
    'actions/charge-start': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/ev/settings', mode='kcm-settings'),
    'actions/charge-stop': None,
    'actions/horn-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'actions/hvac-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'actions/lights-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/horn-lights', mode='default'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/ev/settings', mode='kcm'),
    'charges': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charges', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'pressure': None,
    'res-state': None,
    'soc-levels': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/ev/soc-levels', mode='default'),
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/spring.1.json]
  dict({
    'actions/charge-start': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/charge/pause-resume', mode='kcm'),
    'actions/charge-stop': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/charge/pause-resume', mode='kcm'),
    'alerts': None,
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': None,
    'charging-settings': None,
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-history': None,
    'hvac-sessions': None,
    'hvac-settings': None,
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'notification-settings': None,
    'pressure': None,
    'res-state': None,
    'soc-levels': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/twingo_ze.1.json]
  dict({
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-history': None,
    'charge-mode': None,
    'charge-schedule': None,
    'charging-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charging-settings', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-history': None,
    'hvac-sessions': None,
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'notification-settings': None,
    'pressure': None,
    'res-state': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/zoe_40.1.json]
  dict({
    'actions/charge-set-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/actions/charge-schedule', mode='default'),
    'actions/charge-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charging-start', mode='default'),
    'actions/hvac-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'actions/hvac-stop': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-mode': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charge-mode', mode='default'),
    'charge-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charge-schedule', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': None,
    'lock-status': None,
    'pressure': None,
    'res-state': None,
    'soc-levels': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/zoe_40.2.json]
  dict({
    'actions/charge-set-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/actions/charge-schedule', mode='default'),
    'actions/charge-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charging-start', mode='default'),
    'actions/hvac-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'actions/hvac-stop': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/hvac-start', mode='default'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-mode': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charge-mode', mode='default'),
    'charge-schedule': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charge-schedule', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': None,
    'lock-status': None,
    'pressure': None,
    'res-state': None,
    'soc-levels': None,
  })
# ---
# name: test_get_endpoints[tests/fixtures/kamereon/vehicles/zoe_50.1.json]
  dict({
    'actions/charge-start': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/actions/charging-start', mode='default'),
    'actions/charge-stop': EndpointDefinition(endpoint='/kcm/v1/vehicles/{vin}/charge/pause-resume', mode='kcm'),
    'battery-status': EndpointDefinition(endpoint='/kca/car-adapter/v2/cars/{vin}/battery-status', mode='default'),
    'charge-mode': None,
    'charge-schedule': None,
    'charging-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/charging-settings', mode='default'),
    'cockpit': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/cockpit', mode='default'),
    'hvac-settings': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-settings', mode='default'),
    'hvac-status': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/hvac-status', mode='default'),
    'location': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/location', mode='default'),
    'lock-status': None,
    'pressure': EndpointDefinition(endpoint='/kca/car-adapter/v1/cars/{vin}/pressure', mode='default'),
    'res-state': None,
  })
# ---
# name: test_http_get
  KamereonResponse(raw_data={'data': {'type': 'Car', 'id': 'VF1AAAAA555777999', 'attributes': {'calendar': {'monday': [{'startTime': '2300', 'duration': 480, 'activationState': False}], 'tuesday': [{'startTime': '2300', 'duration': 480, 'activationState': False}], 'wednesday': [{'startTime': '2300', 'duration': 480, 'activationState': False}], 'thursday': [{'startTime': '2300', 'duration': 480, 'activationState': False}], 'friday': [{'startTime': '2300', 'duration': 480, 'activationState': False}], 'saturday': [{'startTime': '2300', 'duration': 480, 'activationState': False}], 'sunday': [{'startTime': '2300', 'duration': 480, 'activationState': False}]}}}}, errors=None)
# ---
# name: test_http_post
  KamereonResponse(raw_data={'data': {'type': 'ChargingStart', 'id': 'guid', 'attributes': {'action': 'start'}}}, errors=None)
# ---
# name: test_http_post.1
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'start',
      }),
      'type': 'ChargingStart',
    }),
  })
# ---
# name: test_set_ac_start
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'start',
        'startDateTime': '2020-11-24T06:30:00Z',
        'targetTemperature': 21,
      }),
      'type': 'HvacStart',
    }),
  })
# ---
# name: test_set_ac_stop
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'cancel',
      }),
      'type': 'HvacStart',
    }),
  })
# ---
# name: test_set_battery_soc
  KamereonVehicleBatterySocActionData(raw_data={})
# ---
# name: test_set_charge_mode
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'schedule_mode',
      }),
      'type': 'ChargeMode',
    }),
  })
# ---
# name: test_set_charge_schedules
  dict({
    'data': dict({
      'attributes': dict({
        'schedules': list([
        ]),
      }),
      'type': 'ChargeSchedule',
    }),
  })
# ---
# name: test_set_charge_start
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'start',
      }),
      'type': 'ChargingStart',
    }),
  })
# ---
# name: test_set_charge_start_r5
  dict({
    'chargeDuration': 9000,
    'chargeModeRq': 'SCHEDULED',
    'chargeTimeStart': '00:00',
    'delegatedActivated': False,
    'lastSettingsUpdateTimestamp': '2025-04-24T12:17:12.247Z',
    'preconditioningHeatedLeftSeat': False,
    'preconditioningHeatedRightSeat': False,
    'preconditioningHeatedStrgWheel': False,
    'preconditioningTemperature': 20.0,
    'programs': list([
      dict({
        'programActivationFriday': True,
        'programActivationMonday': True,
        'programActivationSaturday': True,
        'programActivationStatus': False,
        'programActivationSunday': True,
        'programActivationThursday': True,
        'programActivationTuesday': True,
        'programActivationWednesday': True,
        'programDepartureTime': '02:00',
        'programType': 'CHARGE_AND_PRECONDITIONING',
      }),
    ]),
  })
# ---
# name: test_set_charging_settings
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'always_charging',
      }),
      'type': 'ChargeMode',
    }),
  })
# ---
# name: test_set_hvac_schedules
  dict({
    'data': dict({
      'attributes': dict({
        'schedules': list([
        ]),
      }),
      'type': 'HvacSchedule',
    }),
  })
# ---
# name: test_start_horn
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'start',
        'target': 'horn',
      }),
      'type': 'HornLights',
    }),
  })
# ---
# name: test_start_lights
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'start',
        'target': 'lights',
      }),
      'type': 'HornLights',
    }),
  })
# ---
